clusters/vollminlab-cluster/mediastack/seerr/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seerr-ingress
  namespace: mediastack
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-url: "http://authentik-proxy.authentik.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx"
    nginx.ingress.kubernetes.io/auth-signin: "https://authentik.vollminlab.com/outpost.goauthentik.io/start?rd=https://$http_host$escaped_request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid"
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Host $http_host;
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    shlink.vollminlab.com/slug: seerr
  labels:
    app: seerr
    env: production
    category: media
spec:
  ingressClassName: nginx
  rules:
    - host: seerr.vollminlab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seerr-seerr-chart
                port:
                  number: 80
  tls:
    - hosts:
        - seerr.vollminlab.com
      secretName: wildcard-tls
